--- a/src/main/resources/templates/chat/list.html
+++ b/src/main/resources/templates/chat/list.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="utf-8">
@@ -157,7 +157,7 @@
                       </thead>
                       <tbody>
                       <tr id="list1" href="/chat/board">
-                          <td><span class="badge bg-danger">置顶</span></td>
+                          <td><span class="badge bg-danger">置顶</span>1</td>
                           <td>
 <!--                              <img src="dist/img/default-150x150.png" alt="Product 1" class="img-circle img-size-32 mr-2">-->
                               服务器安装经验总结
@@ -167,7 +167,7 @@
                               <span>张千</span>
                           </td>
                           <td>
-                              123
+                              2
                           </td>
                           <td>
                               张千
@@ -177,17 +177,17 @@
                           </td>
                       </tr>
                       <tr>
-                          <td><span class="badge bg-danger">置顶</span></td>
+                          <td><span class="badge bg-danger">置顶</span>2</td>
                           <td>
                               <!--                              <img src="dist/img/default-150x150.png" alt="Product 1" class="img-circle img-size-32 mr-2">-->
-                              服务器安装经验总结
+                              日常维护常见问题总结
                           </td>
                           <td>
                               <i class="fa fa-user-circle fa-2x"></i>
                               <span>张千</span>
                           </td>
                           <td>
-                              123
+                              0
                           </td>
                           <td>
                               张千
@@ -197,17 +197,17 @@
                           </td>
                       </tr>
                       <tr>
-                          <td><span class="badge bg-danger">置顶</span></td>
+                          <td>3</td>
                           <td>
                               <!--                              <img src="dist/img/default-150x150.png" alt="Product 1" class="img-circle img-size-32 mr-2">-->
-                              服务器安装经验总结
+                              巴可放映机常见问题总结
                           </td>
                           <td>
                               <i class="fa fa-user-circle fa-2x"></i>
                               <span>张千</span>
                           </td>
                           <td>
-                              123
+                              0
                           </td>
                           <td>
                               张千
@@ -217,17 +217,17 @@
                           </td>
                       </tr>
                       <tr>
-                          <td><span class="badge bg-danger">置顶</span></td>
+                          <td>4</td>
                           <td>
                               <!--                              <img src="dist/img/default-150x150.png" alt="Product 1" class="img-circle img-size-32 mr-2">-->
-                              服务器安装经验总结
+                              各品牌设备性能对比
                           </td>
                           <td>
                               <i class="fa fa-user-circle fa-2x"></i>
                               <span>张千</span>
                           </td>
                           <td>
-                              123
+                              0
                           </td>
                           <td>
                               张千
