--- a/src/main/resources/templates/documents/hand_details5180.html
+++ b/src/main/resources/templates/documents/hand_details5180.html
@@ -93,7 +93,7 @@
               <div class="row">
                 <div class="col-12">
                   <h4>
-                    <small class="float-left">故障详细信息 </small>
+                    <small class="float-left">故障详细信息</small>
                     <small class="float-right">更新时间: 2/8/2019</small>
                   </h4>
                 </div>
@@ -105,7 +105,7 @@
                 <div class="col-sm-2 invoice-col">
                   <strong>设备品牌及类型：</strong>
                 
-                    <br>巴可 DP2K系列<br>
+                    <br> BARCO DP2K <br>
                   <address>
                   </address>
 				  
@@ -114,7 +114,7 @@
                 <div class="col-sm-2 invoice-col">
                   <address>
 					<strong>故障代码及说明：</strong>
-                    <br>Code 5004: “lamp - no communication” (Error)<br>
+                    <br>Code 5180: “lamp house - not connected” (Error)<br>
                   </address>
                 </div>
 				<div class="col-sm-2 invoice-col">
@@ -142,23 +142,18 @@
                     </thead>
                     <tbody>
                     <tr>
-                      <td>灯箱没有被正确安装</td>
-                      <td>检查灯箱安装，并重置灯箱</td>
+                      <td>灯箱未正确安装</td>
+                      <td>检查灯箱是否已正确牢固安装，确认三颗锁定螺丝已锁紧</td>
 
                     </tr>
                     <tr>
-                      <td>使用了与本机型号不匹配的灯箱</td>
-                      <td>选择匹配灯箱</td>
+                      <td>开关损坏或未接触</td>
+                      <td>检查灯箱右下角固定螺丝对应的放映机内侧微动开关是否损坏或未接触</td>
 
                     </tr>
                     <tr>
-                      <td>同时显示代码5180（lamp house - not connected）</td>
-                      <td>见<a href="/documents/hand_details5180">5180</a></td>
-
-                    </tr>
-                    <tr>
-                      <td>与灯箱无通讯</td>
-                      <td>检查灯箱前端蓝色插头是否损坏</td>
+                      <td>风扇控制板失灵</td>
+                      <td>更换</td>
 
                     </tr>
                     </tbody>
