--- a/src/main/resources/templates/task/task_search.html
+++ b/src/main/resources/templates/task/task_search.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>日常任务查询</title>
+  <title>任务查询</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -71,12 +71,12 @@
       <div class="container-fluid">
         <div class="row mb-2">
           <div class="col-sm-6">
-            <h1>日常任务查询</h1>
+            <h1>任务查询</h1>
           </div>
           <div class="col-sm-6">
             <ol class="breadcrumb float-sm-right">
               <li class="breadcrumb-item"><a href="#">主页</a></li>
-              <li class="breadcrumb-item active">日常任务查询</li>
+              <li class="breadcrumb-item active">任务查询</li>
             </ol>
           </div>
         </div>
@@ -89,7 +89,7 @@
         <div class="col-12">
 		<div class="card card-primary">
               <div class="card-header">
-                <h3 class="card-title">请输入日常任务信息</h3>
+                <h3 class="card-title">请输入任务信息</h3>
               </div>
               <!-- /.card-header -->
               <!-- form start -->
@@ -104,10 +104,8 @@
                       <label>责任人：</label>
                       <input type="text" class="form-control" name="responsible">
                     </div>
-                  </div>
-                  <div class="row">
                     <div class="form-group col-6">
-                      <label>设备所在影厅：</label>
+                      <label>影厅：</label>
                       <select class="form-control" name="room">
                         <option>影厅1</option>
                         <option>影厅2</option>
@@ -118,7 +116,7 @@
                       </select>
                     </div>
                     <div class="form-group col-6">
-                      <label>设备名称：</label>
+                      <label>设备：</label>
                       <select class="form-control" name="equipment">
                       <option>巴克放映机</option>
                       <option>戴尔服务器</option>
@@ -126,11 +124,9 @@
                       <option>惠普服务器</option>
                       </select>
                     </div>
-                  </div>
-                  <div class="row">
                     <div class="form-group col-12">
-                      <label>日常任务名称：</label>
-                      <input type="text" class="form-control" placeholder="例：修理放映厅1屏幕任务" name="title">
+                      <label>任务名称：</label>
+                      <input type="text" class="form-control" placeholder="例：放映厅1放映机日常维护" name="title">
                     </div>
                   </div>
                 <!-- /.card-body -->
@@ -143,16 +139,16 @@
           <!-- /.card -->
 		  <div class="card card-primary">
             <div class="card-header">
-              <h3 class="card-title">日常任务查询结果</h3>
+              <h3 class="card-title">任务查询结果</h3>
             </div>
             <!--/.card-header -->
             <div class="card-body">
-              <table id="example1" class="table table-bordered table-striped">
+              <table class="table table-bordered table-striped">
                 <thead>
                 <tr>
                   <th>序号</th>
                   <th>任务名称</th>
-                  <th>所在设备</th>
+                  <th>设备</th>
                   <th>日期</th>
                   <th>责任人</th>
                   <th>任务类型</th>
