--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -304,7 +304,7 @@
                                 <div class="d-flex">
                                     <p class="d-flex flex-column">
                                         <span class="text-bold text-lg">&nbsp;</span>
-                                        <span>hPa</span>
+                                        <span>%RH</span>
                                     </p>
                                     <p class="ml-auto d-flex flex-column text-right">
                     <span class="text-success">
