--- a/src/main/resources/templates/model/left.html
+++ b/src/main/resources/templates/model/left.html
@@ -188,12 +188,12 @@
             <ul class="nav nav-treeview">
                 <li class="nav-item">
                     <a href="/question/question" class="nav-link">
-                        <i class="fa fa-edit nav-icon"></i>
-                        <p>题库</p>
+                        <i class="fa fa-search nav-icon"></i>
+                        <p>访问题库</p>
                     </a>
                     <a href="/question/details" class="nav-link">
-                        <i class="fa fa-search nav-icon"></i>
-                        <p>答题</p>
+                        <i class="fa fa-edit nav-icon"></i>
+                        <p>在线测试</p>
                     </a>
                 </li>
             </ul>
