--- a/src/main/resources/templates/documents/operate_course.html
+++ b/src/main/resources/templates/documents/operate_course.html
@@ -94,7 +94,7 @@
               <form role="form">
                 <div class="card-body">
                   <div class="form-group row">
-                    <div class="col-3">
+                    <div class="col-2">
                       <label>设备种类</label>
                       <div class="form-group">
                         <select class="form-control">
@@ -106,7 +106,7 @@
                         </select>
                       </div>
                     </div>
-                    <div class="col-3">
+                    <div class="col-2">
                       <label>规格/类型</label>
                       <div class="form-group">
                         <select class="form-control">
@@ -116,7 +116,7 @@
                         </select>
                       </div>
                     </div>
-                    <div class="col-3">
+                    <div class="col-2">
                       <label>设备品牌</label>
                       <div class="form-group">
                         <select class="form-control">
@@ -127,7 +127,7 @@
                         </select>
                       </div>
                     </div>
-                    <div class="col-3">
+                    <div class="col-2">
                       <label>设备系列</label>
                       <div class="form-group">
                         <select class="form-control">
@@ -137,6 +137,8 @@
                           <option>S 系列</option>
                         </select>
                       </div>
+                    </div>
+                    <div class="col-4">
                       <label>设备型号</label>
                       <input type="text" class="form-control" id="exampleInputEmail1" placeholder="例：DP2K-20C">
                     </div>
