--- a/src/main/resources/templates/course/online_course.html
+++ b/src/main/resources/templates/course/online_course.html
@@ -128,9 +128,9 @@
                   <div style="padding: 0px;border: 1px solid rgb(220,220,220);height: 300px;width: 100%;">
                     <div style="padding-left:10px; padding-top:10px;">
 
-                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/denggaiban.png}" style="height:200px;width:300px;">
+                      <img class="img-responsive attachment-block clearfix" th:src="@{/images/install/前盖板安装.jpg}" style="height:200px;width:300px;">
                     </div>
-                    <p style="padding-left: 10px; padding-right: 10px;">DP2K-20C投影灯盖板拆卸方法</p>
+                    <p style="padding-left: 10px; padding-right: 10px;">DP2K-20C投影灯前盖板安装方法</p>
                     <div class="form-group row">
                       <div class="col-11">
                         <p style="padding-left: 10px; padding-bottom: 30px;">
