modified front pages

--- a/src/main/resources/templates/ai/direction_chat.html
+++ b/src/main/resources/templates/ai/direction_chat.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="utf-8">
@@ -204,7 +204,7 @@
               <!-- /.card-header -->
               <div class="card-body">
                 <!-- Conversations are loaded here -->
-                <div class="direct-chat-messages" style="height:530px;">
+                <div class="direct-chat-messages" style="height:600px;">
                   <!-- Message. Default to the left -->
                   <div class="direct-chat-msg right">
                     <div class="direct-chat-info clearfix">
