--- a/src/main/resources/templates/chat/list.html
+++ b/src/main/resources/templates/chat/list.html
@@ -157,7 +157,7 @@
                       </thead>
                       <tbody>
                       <tr id="list1" href="/chat/board">
-                          <td><span class="badge bg-danger">置顶</span>1</td>
+                          <td>1<span class="badge bg-danger">置顶</span></td>
                           <td>
 <!--                              <img src="dist/img/default-150x150.png" alt="Product 1" class="img-circle img-size-32 mr-2">-->
                               服务器安装经验总结
@@ -177,7 +177,7 @@
                           </td>
                       </tr>
                       <tr>
-                          <td><span class="badge bg-danger">置顶</span>2</td>
+                          <td>2<span class="badge bg-danger">置顶</span></td>
                           <td>
                               <!--                              <img src="dist/img/default-150x150.png" alt="Product 1" class="img-circle img-size-32 mr-2">-->
                               日常维护常见问题总结
