--- a/src/main/resources/templates/chat/list.html
+++ b/src/main/resources/templates/chat/list.html
@@ -101,8 +101,9 @@
           <!-- /.col -->
           <div class="col-md-3 col-sm-6 col-12">
             <div class="info-box">
-              <span class="info-box-icon bg-success"><i class="fa fa-envelope-o"></i></span>
-
+              <span class="info-box-icon bg-success">
+                  <i class="fa fa-envelope-o"></i>
+              </span>
               <div class="info-box-content">
                 <span class="info-box-text">与我相关</span>
                 <span class="info-box-number">33</span>
@@ -128,7 +129,6 @@
           <div class="col-md-3 col-sm-6 col-12">
             <div class="info-box">
               <span class="info-box-icon bg-danger"><i class="fa fa-star-o"></i></span>
-
               <div class="info-box-content">
                 <span class="info-box-text">我的收藏</span>
                 <span class="info-box-number">50</span>
